 * Added more ARIA landmarks across the admin interface and welcome page for screen reader users to navigate the CMS more easily (Beth Menzies)
 * Added ButtonHelper examples in the modelAdmin primer page within documentation (Kalob Taulien)
 * Multiple clarifications, grammar and typo fixes throughout documentation (Dan Swain)
 * Use correct URL in API example in documentation (Michael Bunsen)
 * Fix: ModelAdmin no longer fails when filtering over a foreign key relation (Jason Dilworth, Matt Westcott)
 * Fix: The Wagtail version number is now visible within the Settings menu (Kevin Howbrook)
 * Fix: Scaling images now rounds values to an integer so that images render without errors (Adrian Brunyate)
 * Fix: Revised test decorator to ensure TestPageEditHandlers test cases run correctly (Alex Tomkins)
 * Fix: Wagtail bird animation in admin now ends correctly on all browsers (Deniz Dogan)
 * Fix: Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
 * Fix: Fixed occurences of invalid HTML across the CMS admin (Thibaud Colas)
 * Fix: Admin HTML now includes the correct `dir` attribute for the active language (Andreas Bernacca)
 * Fix: Fix type error when using `--chunk_size` argument on `./manage.py update_index` (Seb Brown)
 * Fix: Avoid rendering entire form in EditHandler's `repr` method (Alex Tomkins)
 * Fix: Add empty alt attributes to HTML output of Embedly and oEmbed embed finders (Andreas Bernacca)
 * Fix: Add empty alt attributes to all images in the CMS admin (Andreas Bernacca)
 * Fix: Make URL generator preview image alt translateable (Thibaud Colas)
 * Fix: Clear pending AJAX request if error occurs on page chooser (Matt Westcott)


2.5.1 (07.05.2019)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent crash when comparing StructBlocks in revision history (Adrian Turjak, Matt Westcott)


2.5 (24.04.2019)
~~~~~~~~~~~~~~~~

 * Django 2.2 support (Matt Westcott, Andy Babic)