@@ -22,6 +22,7 @@ Other features
  * Added ButtonHelper examples in the modelAdmin primer page within documentation (Kalob Taulien)
  * Multiple clarifications, grammar and typo fixes throughout documentation (Dan Swain)
  * Use correct URL in API example in documentation (Michael Bunsen)
+ * Move datetime widget initialiser JS into the widget's form media instead of page editor media (Matt Westcott)
 
 Bug fixes
 ~~~~~~~~~
