@@ -25,5 +25,3 @@
 <script src="{% static 'wagtailadmin/js/vendor/bootstrap-tooltip.js' %}"></script>
 
 {% hook_output 'insert_editor_js' %}
-
-{% include "wagtailadmin/shared/datetimepicker_translations.html" %}
